--- a/FlexboxStarter/app.css
+++ b/FlexboxStarter/app.css
@@ -10,5 +10,11 @@ h1 {
     height: 500px;
     margin: 0 auto;
     border: 5px solid #003049;
+    display: flex;
+    flex-direction: column;
 }
 
+#container div{
+    height: 200px;
+    width: 200px;
+}
