--- a/FlexboxStarter/app.css
+++ b/FlexboxStarter/app.css
@@ -12,6 +12,7 @@ h1 {
     border: 5px solid #003049;
     display: flex;
     flex-direction: column;
+    /* justify-content: center; */
 }
 
 #container div{
