--- a/FlexboxStarter/app.css
+++ b/FlexboxStarter/app.css
@@ -13,6 +13,7 @@ h1 {
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
+    flex-wrap: wrap;
 }
 
 #container div{
