--- a/FlexboxStarter/app.css
+++ b/FlexboxStarter/app.css
@@ -12,11 +12,35 @@ h1 {
     border: 5px solid #003049;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-end;
+    align-content: space-around;
 }
 
-#container div{
+#container div {
     height: 200px;
     width: 200px;
+}
+
+div:nth-of-type(5){
+    align-self: flex-start;
+}
+
+main{
+    width: 80%;
+    height: 500px;
+    margin: 1em auto;
+    border: 5px solid black;
+    display: flex;
+}
+
+main .sidebar{
+    flex: 1 3 200px;
+    background-color: blue;
+}
+
+main .maincontent{
+    flex: 2 2 550px;
+    background-color: chartreuse;
 }
