--- a/MediaQueries/app.css
+++ b/MediaQueries/app.css
@@ -7,13 +7,23 @@ h1 {
     text-align: center;
 }
 nav {
-    font-size: 1.5em;
+    font-size: 1em;
+    display: flex;
+    justify-content: space-between;
 }
 
 ul,li {
     display: inline;
     margin: 0;
     padding: 0;
+    
+}
+
+ul{
+    flex: 1;
+    max-width: 50%;
+    display: flex;
+    justify-content: space-around;
 }
 
 h1 {
@@ -24,16 +34,41 @@ h1 {
     h1{
         color: orange;
     }
+
+    nav{
+        font-size: 1.2em;
+    }
 }
 
 @media (min-width: 1000px){
     h1{
         color: orangered;
     }
+
+    nav{
+        font-size: 1.5em;
+    }
 }
 
-@media (min-width: 1500px){
+@media (min-width: 1200px){
     h1{
         color: forestgreen;
+    }
+}
+
+@media (max-width: 768px){
+    h1{
+        font-size: 4em;
+    }
+}
+
+@media (max-width: 576px){
+    h1{
+        font-size: 3em;
+    }
+
+    nav, nav ul{
+        flex-direction: column;
+        align-items: center;
     }
 }
